# projeto_felsk

./: README.md  UML.html  rodar_tudo_explicacao.txt
back/: CMakeLists.txt  MaridoAluguelCorrigido.cpp  README.md  TESTES_REALIZADOS.md  rodar_backend.bat
back/data/: banco_dados.txt
back/include/: httplib.h
back/include/application/dto/: ClienteDtos.hpp  ContratoDtos.hpp  DtoMapper.hpp  HabilidadeDtos.hpp  TrabalhadorDtos.hpp
back/include/application/service/: ClienteService.hpp  ContratoService.hpp  TrabalhadorService.hpp
back/include/domain/model/: Cliente.hpp  Contrato.hpp  Data.hpp  Habilidade.hpp  Pessoa.hpp  StatusContrato.hpp  Trabalhador.hpp
back/include/domain/repository/: IClienteRepository.hpp  IContratoRepository.hpp  ITrabalhadorRepository.hpp
back/include/infrastructure/repository/: TxtClienteRepository.hpp  TxtContratoRepository.hpp  TxtTrabalhadorRepository.hpp
back/include/infrastructure/storage/: TextDatabase.hpp
back/include/presentation/http/: HttpServer.hpp  HttpTypes.hpp  JsonUtil.hpp
back/scripts/: comandos_msys2.md
back/src/: main.cpp
back/src/application/dto/: ClienteDtos.cpp  ContratoDtos.cpp  DtoMapper.cpp  HabilidadeDtos.cpp  TrabalhadorDtos.cpp
back/src/application/service/: ClienteService.cpp  ContratoService.cpp  TrabalhadorService.cpp
back/src/domain/model/: Cliente.cpp  Contrato.cpp  Data.cpp  Habilidade.cpp  Pessoa.cpp  StatusContrato.cpp  Trabalhador.cpp
back/src/infrastructure/repository/: TxtClienteRepository.cpp  TxtContratoRepository.cpp  TxtTrabalhadorRepository.cpp
front/: README.md  angular.json  (+2 more)
(+33 files in other folders)
